# RenderEngine-2021

./: .clang-format  .gitignore  CMakeLists.txt  run_all.sh
src/: create_scene.cu  create_scene.h  cuda_error.cu  cuda_error.h  define.h  destroy_scene.cu  destroy_scene.h  hit.cu  hit.h  image.cpp  image.cu  image.h  main.cpp  main.cu  material.cpp  material.cu  material.h  ray.cpp  ray.cu  ray.h  render.cu  render.h  scene.cpp  scene.cu  scene.h  scene_parser.cu  scene_parser.h  test.cpp  test.cu
src/camera/: camera.cu  camera.h  cameras.h  perspective_camera.cpp  perspective_camera.cu  perspective_camera.h
src/device/: hit.cu  hit.h  material.cu  material.h  random.cu  random.h  ray.cu  ray.h
src/device/camera/: camera.cu  camera.h  perspective_camera.cu  perspective_camera.h
src/device/lights/: directional_light.cu  directional_light.h  disk_light.cu  disk_light.h  light.cu  light.h  lights.h  point_light.cu  point_light.h
src/device/objects/: BezierCurve.cu  BezierCurve.h  BoundingBox.cu  BoundingObject.cu  BsplineCurve.cu  BsplineCurve.h  curve.cu  curve.h  group.cu  group.h  mesh.cu  mesh.h  object3d.cu  object3d.h  plane.cu  plane.h  revsurface.cu  revsurface.h  sphere.cu  sphere.h  transform.cu  transform.h  triangle.cu  triangle.h
src/device/spaces/: BSPNode.cu  BSPNode.h  BezierCurve.cu  BezierCurve.h  BoundingBox.cu  BoundingBox.h  BoundingObject.h  BsplineCurve.cu  BsplineCurve.h  axis.h  curve.h  group.cu  group.h  mesh.cu  mesh.h  object3d.h  plane.cu  plane.h  revsurface.cu  revsurface.h  space.cu  space.h  sphere.cu  sphere.h  transform.h  triangle.cu  triangle.h
src/lights/: directional_light.cu  directional_light.h  light.cu  light.h  point_light.cu  point_light.h
src/objects/: BezierCurve.cpp  BezierCurve.cu  BezierCurve.h  BoundingBox.cpp  BoundingBox.cu  BoundingBox.h  BoundingObject.cu  BoundingObject.h  BsplineCurve.cu  BsplineCurve.h  curve.cpp  curve.cu  curve.h  group.cu  group.h  mesh.cpp  mesh.cu  mesh.h  object3d.cu  object3d.h  plane.cu  plane.h  revsurface.cu  revsurface.h  sphere.cpp  sphere.cu  sphere.h  transform.cu  transform.h  triangle.cpp  triangle.cu  triangle.h
src/scene/: scene.cu  scene.h  scene_parser.cu  scene_parser.h
src/scene/parameters/: camera_params.h  light_params.h  lights_params.h  material_params.h  materials_params.h  parameters.h
src/scene/parameters/objects/: mesh_params.h  object_type.h  plane_params.h  sphere_params.h  triangle_params.h
src/scene/parameters/spaces/: curve_params.h  group_params.h  mesh_params.h  object_params_pointer.h  object_type.h  plane_params.h  revsurface_params.h  sphere_params.h  transform_params.h
